1. adjusted styling for better ui on mobile devices 2. fixed issue with audio player where intervals break if user paS 2. fixed issue with audio player causing interval problems

--- a/client/public/assets/css/style.css
+++ b/client/public/assets/css/style.css
@@ -37,3 +37,26 @@ audio::-webkit-media-controls-panel {
     max-height: 253px;
     overflow: auto;
 }
+
+@media (min-width: 576px) {
+    .container {
+        margin-top: 30px
+    }
+}
+
+@media (max-width: 575px) {
+    h1 {
+        font-size: 1.2rem !important;
+    }
+
+    audio {
+        width: 100%;
+        height: 37px;
+    }
+}
+
+@media (max-width: 375px) {
+    h1 {
+        font-size: 1.0rem !important;
+    }
+}
